feat: concluido dominio de usuario, configurado o checkstyle, jacoco e pitest e iniciado os teste unitario da service

--- a/SpringFramework/app-transaction-api/src/main/resources/application-local.yml
+++ b/SpringFramework/app-transaction-api/src/main/resources/application-local.yml
@@ -18,4 +18,8 @@ spring:
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
     locations: classpath:db/migration,classpath:db/testdata
-
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
