--- a/SpringFramework/app-transaction-api/src/main/resources/application.yml
+++ b/SpringFramework/app-transaction-api/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
@@ -18,4 +18,24 @@ spring:
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
     locations: classpath:db/migration
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 0.1
+    baggage:
+      correlation:
+        enabled: true
+        fields: [x-correlationID]
+      remote-fields: [x-correlationID]
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
+  observations:
+    key-values:
+      my_custom_tag: ${spring.application.name}
 
