--- a/SpringFramework/app-transaction-api/pom.xml
+++ b/SpringFramework/app-transaction-api/pom.xml
@@ -49,6 +49,12 @@
 
 		<dependency>
 			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-datadog</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing-bridge-brave</artifactId>
 		</dependency>
 
@@ -114,6 +120,7 @@
 			<artifactId>mysql</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
