--- a/SpringFramework/app-transaction-api/src/main/resources/application.yml
+++ b/SpringFramework/app-transaction-api/src/main/resources/application.yml
@@ -19,6 +19,12 @@ spring:
     password: ${spring.datasource.password}
     locations: classpath:db/migration
 management:
+  datadog:
+    metrics:
+      export:
+        api-key: ${DATADOG_API_KEY}
+        application-key: ${DATADOG_APP_KEY}
+        uri: ${DATADOG_URI}
   tracing:
     enabled: true
     sampling:
