--- a/SpringFramework/app-transaction-api/pom.xml
+++ b/SpringFramework/app-transaction-api/pom.xml
@@ -18,9 +18,8 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<encoding>UTF-8</encoding>
-		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<skip.ut>false</skip.ut>
@@ -291,8 +290,8 @@
 						<param>io.github.wesleyosantos91.*</param>
 					</targetTests>
 					<excludedTestClasses>
-						<param>io.github.wesleyosantos91.api.v1.controller.UserControllerIT</param>
 						<param>io.github.wesleyosantos91.ApplicationTests</param>
+						<param>io.github.wesleyosantos91.cucumber.CucumberIT</param>
 					</excludedTestClasses>
 					<excludedClasses>
 						<param>io.github.github.*Application</param>
