test: implementado os testes de performance, carga e fumaça com k6 e jmeter

--- a/SpringFramework/app-transaction-api/src/main/resources/application-local.yml
+++ b/SpringFramework/app-transaction-api/src/main/resources/application-local.yml
@@ -1,11 +1,20 @@
+#server:
+#  tomcat:
+#    max-connections: 1000
 spring:
   application:
     name: app-transation-api
+  threads:
+    virtual:
+      enabled: true
   datasource:
     url: jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/transactions?allowPublicKeyRetrieval=true&useSSL=false
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 50
+      minimum-idle: 10
   jpa:
     hibernate:
       ddl-auto: none
@@ -44,5 +53,4 @@ management:
   observations:
     key-values:
       my_custom_tag: ${spring.application.name}
-
 
