--- a/SpringFramework/app-transaction-api/pom.xml
+++ b/SpringFramework/app-transaction-api/pom.xml
@@ -65,6 +65,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -303,6 +309,7 @@
 						<param>io.github.wesleyosantos91.core.mapper.*</param>
 						<param>io.github.wesleyosantos91.api.exception.*</param>
 						<param>io.github.wesleyosantos91.infrastructure.metrics.*</param>
+						<param>io.github.wesleyosantos91.infrastructure.springdoc.*</param>
 					</excludedClasses>
 					<avoidCallsTo>
 						<param>org.springframework.util.StopWatch</param>
